@@ -3,6 +3,7 @@
 * specify explicit invocant on all method calls
 * made the `expect` attribute for Test::Builder::Plan private 
 * added tests
+* print TestPlan footer when T::B object goes out of scope (DESTROY())
 
 == Changes for version 0.1.0
 
